data/Java/07-missing-semi/3/[M]Error.txt
*https://stackify.com/top-https://www.tutorialspoint.com/java/java_arrays.htm
MyClass.java:8: error: ';' expected
          System.out.println(element)
                                     ^